# bounded_types

./: Cargo.toml  README.md
src/: lib.rs
src/compile_test/: bounded_int_negative.rs  bounds_1.rs
src/compile_test/must_fail/: bad_assign_1.rs  bad_assign_1.stderr  bad_assign_2.rs  bad_assign_2.stderr  bad_bounds_2.rs  bad_bounds_2.stderr  bad_compare_1.rs  bad_compare_1.stderr  bad_compare_2.rs  bad_compare_2.stderr
src/compile_test/must_fail/ignore/: bad_compare_3.rs  bad_compare_3.stderr
